# agro_lakehouse

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  dbt_test.yml  terraform_plan.yml
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: _schema.yml  dim_date.sql  dim_destination.sql  dim_product.sql  dim_province.sql  fct_exports.sql
dbt/models/staging/: _sources.yml  _staging.yml  stg_indec_exports.sql  stg_senasa_certs.sql  stg_weather_readings.sql  stg_worldbank_prices.sql
dbt/snapshots/: snap_destination.sql
docs/: data_sources.md
glue/jobs/: silver_indec.py  silver_senasa.py  silver_weather.py  silver_worldbank.py
ingestion/: explore.py
ingestion/indec/: download_sample.py  ingest_indec.py
ingestion/senasa/: download_sample.py  ingest_senasa.py
ingestion/utils/: http.py  s3_utils.py
ingestion/weather/: ingest_weather.py
ingestion/worldbank/: download_sample.py  ingest_worldbank.py
scripts/: install-hooks.sh
scripts/hooks/: pre-commit  pre-push
terraform/: athena.tf  glue.tf  glue_jobs.tf  iam.tf  main.tf  outputs.tf  s3.tf  variables.tf
tests/: conftest.py  test_explore.py
tests/indec/: test_ingest_indec.py
tests/senasa/: test_ingest_senasa.py
tests/silver/: test_silver_indec.py  test_silver_senasa.py  test_silver_weather.py  test_silver_worldbank.py
tests/utils/: test_http.py  test_s3_utils.py
tests/weather/: test_ingest_weather.py
tests/worldbank/: test_ingest_worldbank.py
