[project]
name = "agro-lakehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.34",
    "httpx>=0.28",
    "pandas>=2.2",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "moto[s3]>=5.1.22",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "respx>=0.22.0",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
